--- a/_site.yml
+++ b/_site.yml
@@ -4,9 +4,11 @@ navbar:
   author: "Steven Ndung'u"
   affiliation: African Institute of Mathematical Sciences
   email: steven.ndungu@aims-senegal.org
+  output: github_document
   left:
     -text: "Home"
      href:index.Rmd
     -text: "About"
      href:about.Rmd
+     
   
